--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="wrap">
         <header id="header" class="clearfix">
             <div class="topleft">
-                <a href="#"><img src="C:\Users\10hon\OneDrive\바탕 화면\menu\img\홈페이지로고.png" width="280"></a>
+                <a href="#"><img src="img/홈페이지로고.png" width="280"></a>
             </div>
             <nav>
                 <a href="https://loadingdd.github.io/webp202102.github.io/">[ 로그인 ]</a>
@@ -58,7 +58,7 @@
 
             <section id = "contents">
                 <div id = "intro">
-                 <img src="C:\Users\10hon\OneDrive\바탕 화면\menu\img\실험3.png" width="1440">
+                 <img src="img/실험3.png" width="1440">
             </div>
 
             </section>
